Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
Description
I get a segfault in test_pandas with Python 2.7.
gdb stack trace (excerpt):
Thread 27 "python" received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7fffb7fff700 (LWP 17725)] 0x00007fffcac1a9f9 in arrow::py::internal::PyDate_from_int (val=10957, unit=arrow::DateUnit::DAY, out=0x555555e1b9b0) at ../src/arrow/python/datetime.cc:229 229 *out = PyDate_FromDate(static_cast<int32_t>(year), static_cast<int32_t>(month), (gdb) bt #0 0x00007fffcac1a9f9 in arrow::py::internal::PyDate_from_int (val=10957, unit=arrow::DateUnit::DAY, out=0x555555e1b9b0) at ../src/arrow/python/datetime.cc:229 #1 0x00007fffcabaed34 in arrow::Status arrow::py::ConvertDates<arrow::Date32Type>(arrow::py::PandasOptions const&, arrow::ChunkedArray const&, _object**)::{lambda(int, _object**)#1}::operator()(int, _object**) const (this=0x7fffb7ffde90, value=10957, out=0x555555e1b9b0) at ../src/arrow/python/arrow_to_pandas.cc:657 #2 0x00007fffcabaeb8c in arrow::Status arrow::py::ConvertAsPyObjects<arrow::Date32Type, arrow::Status arrow::py::ConvertDates<arrow::Date32Type>(arrow::py::PandasOptions const&, arrow::ChunkedArray const&, _object**)::{lambda(int, _object**)#1}&>(arrow::py::PandasOptions const&, arrow::ChunkedArray const&, arrow::Status arrow::py::ConvertDates<arrow::Date32Type>(arrow::py::PandasOptions const&, arrow::ChunkedArray const&, _object**)::{lambda(int, _object**)#1}&, _object**)::{lambda(int const&, _object**)#1}::operator()(int const, _object**) const (this=0x7fffb7ffdd88, value=@0x7fffb7ffdcbc: 10957, out_values=0x555555e1b9b0) at ../src/arrow/python/arrow_to_pandas.cc:417
Attachments
Issue Links
- links to